[gd_scene load_steps=14 format=3 uid="uid://ckacwciiu6sh4"]

[ext_resource type="Texture2D" uid="uid://52na5utmgmrn" path="res://assets/misc/textures/menu/menu.png" id="1_vovv2"]
[ext_resource type="Script" uid="uid://xmae1ksmw4kg" path="res://gd/misc/menu/main_menu.gd" id="2_1k4da"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://assets/misc/fonts/ariblk.ttf" id="3_bbqo6"]
[ext_resource type="AudioStream" uid="uid://b4ysnjsshn364" path="res://assets/misc/sounds/uihover.mp3" id="4_vovv2"]
[ext_resource type="AudioStream" uid="uid://3e6asid2bfxh" path="res://assets/misc/sounds/uipress.mp3" id="5_1k4da"]
[ext_resource type="AudioStream" uid="uid://dpme8t701ycho" path="res://assets/misc/sounds/uirelease.mp3" id="6_bbqo6"]
[ext_resource type="AudioStream" uid="uid://bw8dabod042is" path="res://assets/misc/sounds/baa.mp3" id="7_d4hu8"]
[ext_resource type="Texture2D" uid="uid://biq4difdo2584" path="res://assets/misc/textures/menu/crazycattle_logo.png" id="8_gdhp0"]
[ext_resource type="Texture2D" uid="uid://dx11833n71gqk" path="res://assets/misc/textures/menu/crazy_icon.png" id="9_pstia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ecwwl"]

[sub_resource type="Theme" id="Theme_mae5d"]
default_font = ExtResource("3_bbqo6")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3_bbqo6")
Panel/styles/panel = SubResource("StyleBoxEmpty_ecwwl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hy44"]

[sub_resource type="LabelSettings" id="LabelSettings_h1wq0"]
font = ExtResource("3_bbqo6")
font_size = 10

[node name="Menu" type="Node2D"]
script = ExtResource("2_1k4da")
metadata/_custom_type_script = "uid://ckalqlqpwqpyl"

[node name="Menu" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(320, 240)
texture = ExtResource("1_vovv2")

[node name="ng" type="Button" parent="."]
texture_filter = 2
offset_left = 192.0
offset_top = 280.0
offset_right = 272.0
offset_bottom = 298.0
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_mae5d")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_bbqo6")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hy44")
text = "New Game"
alignment = 0

[node name="opt" type="Button" parent="."]
offset_left = 192.0
offset_top = 304.0
offset_right = 272.0
offset_bottom = 322.0
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_mae5d")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_bbqo6")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hy44")
text = "Options"
alignment = 0

[node name="quit" type="Button" parent="."]
texture_filter = 2
offset_left = 192.0
offset_top = 352.0
offset_right = 272.0
offset_bottom = 370.0
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_mae5d")
theme_override_colors/font_disabled_color = Color(0, 0, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_bbqo6")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hy44")
text = "Exit"
alignment = 0

[node name="Uihover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vovv2")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1k4da")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bbqo6")
volume_db = -10.0
mix_target = 2

[node name="Baa" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d4hu8")
volume_db = -10.0
pitch_scale = 1.25

[node name="text" type="Label" parent="."]
offset_top = 458.0
offset_right = 639.0
offset_bottom = 480.0
text = "CrazyCattle3D is a registered trademark of Anna Mayberry LLC. This software is distrubuted as donationware"
label_settings = SubResource("LabelSettings_h1wq0")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 53.0
offset_top = 88.0
offset_right = 575.0
offset_bottom = 215.0
texture = ExtResource("8_gdhp0")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 405.0
offset_top = -4.0
offset_right = 533.0
offset_bottom = 135.0
texture = ExtResource("9_pstia")

[node name="mul" type="Button" parent="."]
offset_left = 192.0
offset_top = 328.0
offset_right = 272.0
offset_bottom = 346.0
scale = Vector2(1.5, 1.5)
tooltip_text = "NOT IMPLEMENTED"
theme = SubResource("Theme_mae5d")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_bbqo6")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4hy44")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4hy44")
disabled = true
text = "Multiplayer"
alignment = 0

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[connection signal="button_down" from="ng" to="." method="_on_ng_button_down"]
[connection signal="button_up" from="ng" to="." method="_on_ng_button_up"]
[connection signal="mouse_entered" from="ng" to="." method="_on_ng_mouse_entered"]
[connection signal="pressed" from="ng" to="." method="_on_ng_pressed"]
[connection signal="button_down" from="opt" to="." method="_on_opt_button_down"]
[connection signal="button_up" from="opt" to="." method="_on_opt_button_up"]
[connection signal="mouse_entered" from="opt" to="." method="_on_opt_mouse_entered"]
[connection signal="pressed" from="opt" to="." method="_on_opt_pressed"]
[connection signal="button_down" from="quit" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="quit" to="." method="_on_quit_button_up"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="Baa" to="." method="_on_baa_finished"]
[connection signal="button_down" from="mul" to="." method="_on_mul_button_down"]
[connection signal="button_up" from="mul" to="." method="_on_mul_button_up"]
[connection signal="mouse_entered" from="mul" to="." method="_on_mul_mouse_entered"]
[connection signal="pressed" from="mul" to="." method="_on_mul_pressed"]
